--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Hola, GitHub Pages funciona</h1>
     <p>Si ves esto, tu página está desplegando correctamente.</p>
+    <!-- <link rel="stylesheet" href="css/style.css" /> -->
+<!-- <script src="js/main.js"></script> -->
+
 </body>
 </html>
