--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Prueba GitHub Pages</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Malla Mecatrónica Interactiva</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    <h1>Hola, GitHub Pages funciona</h1>
-    <p>Si ves esto, tu página está desplegando correctamente.</p>
-    <!-- <link rel="stylesheet" href="css/style.css" /> -->
-<!-- <script src="js/main.js"></script> -->
-
+  <h1>Malla Curricular de Ingeniería Mecatrónica</h1>
+  <div id="malla"></div>
+  <script src="js/data.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
+
